Fix width for movie container. Avoids jumps

--- a/app/app/styles/modules/movie-list.scss
+++ b/app/app/styles/modules/movie-list.scss
@@ -4,6 +4,7 @@
     flex-wrap: wrap;
     margin: 1rem auto;
     max-width: 1200px;
+    min-height: 100vh;
     width: 100%;
 
     .spinner {
